force-app/main/default/objects/ampi__xx_Dynamic_Relationship__c/ampi__xx_Dynamic_Relationship__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Dynamic Relationship</label>
</CustomObject>