force-app/main/default/objects/ampi__xx_Dynamic_Relationship__c/fields/ampi__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Page_Name__c</fullName>
    <label>Page Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>