force-app/main/default/objects/ampi__xx_Dynamic_Relationship__c/fields/ampi__Profile_User__c.field-meta.xml
<CustomField>
    <fullName>ampi__Profile_User__c</fullName>
    <label>Profile / User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>