force-app/main/default/objects/ampi__xx_Dynamic_Relationship__c/fields/ampi__Relationship__c.field-meta.xml
<CustomField>
    <fullName>ampi__Relationship__c</fullName>
    <label>Relationship</label>
    <length>128</length>
    <type>Text</type>
</CustomField>